# Dagestan

./: .gitignore  .gitmodules  .rustfmt.toml  404.html  Cargo.dev.toml  HEADER-Apache-2  HEADER-GPL3  LICENSE.md  Makefile  README.md  conventions.md  cov_report.sh  differences.html  gen_cov_data.sh  how_stance_does_it.html  index.html  internals.html  print.html  reliable_broadcast.html  searchindex.js  searchindex.json  stance_api.html  what_is_stance.html
.github/workflows/: check-version-bumped-aggregator.yml  check-version-bumped-consensus.yml  check-version-bumped-crypto.yml  check-version-bumped-elections.yml  check-version-bumped-finality-gadget.yml  check-version-bumped-mock.yml  check-version-bumped-rmc.yml  check-version-bumped-runtime-companion.yml  check-version-bumped-types.yml  coverage.yml  push-foundation-repo.yml  tests.yml
bft-engine/consensus/crypto/: Cargo.toml  README.md
bft-engine/consensus/crypto/src/: signature.rs
bft-engine/consensus/fuzz/: Cargo.toml
bft-engine/consensus/fuzz/src/: afl_target.rs  lib.rs  libfuzz_target.rs  main.rs
bft-engine/consensus/mock/: Cargo.toml  README.md
bft-engine/consensus/mock/src/: dataio.rs  lib.rs  spawner.rs
bft-engine/consensus/rmc/: Cargo.toml
bft-engine/consensus/rmc/src/: lib.rs
bft-engine/consensus/stance-bft/: Cargo.toml  README.md
bft-engine/consensus/stance-bft/src/: member.rs  network.rs  terminator.rs
bft-engine/consensus/stance-bft/src/creation/: creator.rs
bft-engine/consensus/stance-bft/src/runway/: backup.rs  mod.rs
bft-engine/consensus/stance-bft/src/testing/: alerts.rs  crash_recovery.rs  creation.rs
bft-engine/consensus/stance-bft/src/units/: mod.rs
bft-engine/consensus/types/: Cargo.toml  README.md
bft-engine/consensus/types/src/: dataio.rs  network.rs
bft-engine/stance-bft/consensus/: README.md
bft-engine/stance-bft/consensus/src/: config.rs  consensus.rs  extender.rs  lib.rs  member.rs  network.rs  terminal.rs  terminator.rs
bft-engine/stance-bft/mock/src/: hasher.rs  network.rs
bft-engine/stance-bft/rmc/: README.md
bft-engine/stance-bft/rmc/src/: lib.rs
bft-engine/stance-bft/types/src/: lib.rs  network.rs  tasks.rs
bft/bft-core/crypto/: Cargo.toml  README.md
bft/bft-core/types/: Cargo.toml  README.md
bft/bft-core/types/src/: network.rs
bft/stance-bft/crypto/: Cargo.toml  README.md
bft/stance-bft/crypto/src/: signature.rs
bft/stance-bft/mock/: Cargo.toml  README.md
bft/stance-bft/mock/src/: dataio.rs  spawner.rs
bft/stance-bft/rmc/: Cargo.toml  README.md
bft/stance-bft/rmc/src/: lib.rs
bft/stance-bft/types/: Cargo.toml  README.md
bft/stance-bft/types/src/: dataio.rs  network.rs
consensus/: Cargo.toml  README.md
consensus/aggregator/: Cargo.toml
consensus/aggregator/src/: aggregator.rs  lib.rs  multicast.rs
consensus/elections/: Cargo.toml
consensus/elections/src/: impls.rs  lib.rs  mock.rs  tests.rs  traits.rs
consensus/elections/src/migrations/: mod.rs  v0_to_v1.rs  v1_to_v2.rs  v2_to_v3.rs
consensus/src/: config.rs  consensus.rs  extender.rs  lib.rs  member.rs  network.rs  task_queue.rs  terminal.rs  terminator.rs
consensus/src/alerts/: io.rs  mod.rs
consensus/src/creation/: creator.rs  mod.rs
consensus/src/runway/: backup.rs  collection.rs  mod.rs  packer.rs
consensus/src/testing/: alerts.rs  byzantine.rs  consensus.rs  crash.rs  crash_recovery.rs  creation.rs  dag.rs  mod.rs  unreliable.rs
consensus/src/units/: mod.rs  store.rs  testing.rs  validator.rs
crypto/src/: signature.rs
docs/: book.toml
docs/src/: SUMMARY.md  differences.md  how_dagestan_does_it.md  how_stance_does_it.md  stance_api.md  what_is_dagestan.md  what_is_stance.md
finality/finality-companion/: Cargo.toml
finality/finality-companion/src/: lib.rs  mock.rs  tests.rs
finality/finality-companion/src/migrations/: mod.rs  v0_to_v1.rs  v1_to_v2.rs
finality/finality-gadget/: Cargo.toml  README.md
finality/finality-gadget/src/: compatibility.rs  crypto.rs  finalization.rs  hash.rs  import.rs  lib.rs  metrics.rs  session.rs  session_map.rs  substrate_network.rs  tcp_network.rs
finality/finality-gadget/src/abft/: common.rs  crypto.rs  current.rs  legacy.rs  mod.rs  network.rs  traits.rs  types.rs
finality/finality-gadget/src/aggregation/: mod.rs
finality/finality-gadget/src/data_io/: chain_info.rs  data_interpreter.rs  data_provider.rs  data_store.rs  mod.rs  proposal.rs  status_provider.rs
finality/finality-gadget/src/justification/: compatibility.rs  handler.rs  mod.rs  requester.rs  scheduler.rs
finality/finality-gadget/src/network/: aleph.rs  component.rs  mock.rs  mod.rs  service.rs  session.rs  split.rs  substrate.rs  tcp.rs
finality/finality-gadget/src/nodes/: mod.rs  nonvalidator_node.rs  validator_node.rs
finality/runtime-companion/: Cargo.toml
finality/runtime-companion/src/: impls.rs  lib.rs  mock.rs  tests.rs  traits.rs
finality/runtime-companion/src/migrations/: mod.rs  v0_to_v1.rs  v1_to_v2.rs
reliable-broadcast/rmc/: Cargo.toml  README.md
reliable-broadcast/rmc-aggregator/: Cargo.toml
reliable-broadcast/rmc-aggregator/src/: aggregator.rs  lib.rs  multicast.rs
reliable-broadcast/rmc/src/: lib.rs
scripts/: run-clippy.sh  run.sh
stance-bft/consensus/src/: consensus.rs
stance-bft/mock/src/: network.rs
types/src/: dataio.rs
utils/crypto/: Cargo.toml  README.md
utils/crypto/src/: lib.rs  node.rs  signature.rs
utils/examples/blockchain/: Cargo.toml
utils/examples/ordering/: .gitignore  Cargo.toml  run.sh
utils/examples/ordering/src/: dataio.rs  main.rs  network.rs
utils/fuzz/: Cargo.toml
utils/fuzz/src/: afl_target.rs  lib.rs  libfuzz_target.rs  main.rs
utils/mock/: Cargo.toml  README.md
utils/mock/src/: dataio.rs  hasher.rs  lib.rs  network.rs  spawner.rs
utils/mock/src/crypto/: keychain.rs  mod.rs  signable.rs  signature.rs  wrappers.rs
utils/primitives/: Cargo.toml
utils/primitives/src/: lib.rs
utils/support/: Cargo.toml
utils/support/src/: lib.rs
utils/types/: Cargo.toml  README.md
utils/types/src/: dataio.rs  lib.rs  network.rs  tasks.rs
(+119 files in other folders)
