[package]
name = "pallet-elections"
version = "0.5.4"
edition = "2021"
license = "Apache 2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

frame-support = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
frame-election-provider-support = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
pallet-authorship = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
pallet-balances = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
pallet-session = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
pallet-staking = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-core = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-io = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-staking = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-std = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-runtime = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }

dagestan-support = { path = "../../utils/support", default-features = false }
dagestan-primitives = { path = "../../utils/primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "frame-election-provider-support/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-authorship/std",
    "dagestan-support/std",
    "primitives/std",
    "pallet-balances/std",
    "sp-staking/std",
    "sp-runtime/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "dagestan-support/try-runtime",
]
