[package]
name = "dagestan-finality-runtime-companion"
version = "0.5.4"
authors = ["Setheum Labs"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
serde = "1.0"
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

frame-support = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
pallet-balances = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
pallet-session = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-io = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-std = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }

dagestan-support = { path = "../../utils/support", default-features = false }
dagestan-primitives = { path = "../../utils/primitives", default-features = false }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-runtime = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-core = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "dagestan-primitives/std",
    "pallet-balances/std",
    "pallet-session/std",
    "dagestan-support/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "dagestan-support/try-runtime",
]
