[package]
name = "stance-rmc"
version = "0.9.81"
authors = ["Setheum Labs"]
edition = "2021"

[dependencies]
stance-crypto = { path = "../../utils/crypto", version = "0.9.81" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
futures = "0.3"
futures-timer = "3.0"
log = "0.4"

[dev-dependencies]
stance-mock = { path = "../mock" }
rand = "0.8"
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
