[package]
name = "stance-mock"
version = "0.9.81"
authors = ["Setheum Labs"]
edition = "2021"

[dependencies]
stance-types = { path = "../types", version = "0.9.81" }
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
