[package]
name = "dagestan-support"
version = "0.1.4"
edition = "2021"

[dependencies]
frame-support = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }
sp-std = { default-features = false, git = "https://github.com/openweb3-foundation/substrate.git", branch = "setheum-polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-std/std"
]
try-runtime = [
    "frame-support/try-runtime",
]
