[package]
name = "stance-bft-crypto"
version = "0.5.2"
authors = ["Setheum Labs"]
edition = "2021"

[dependencies]
async-trait = "0.1"
bit-vec = "0.6"
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
derive_more = "0.99"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
