[package]
name = "stance-examples-ordering"
version = "0.9.81"
authors = ["Setheum Labs"]
edition = "2021"
publish = false

[dependencies]
stance-consensus = { path = "../../../consensus", version = "*" }
stance-mock = { path = "../../mock", version = "*" }
stance-types = { path = "../../types", version = "*" }
async-trait = "0.1"
clap = { version = "3.2.1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
env_logger = "0.9"
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "io-util", "net", "time"] }
